assets/css/styles.css
body {
    font-family: var(--font-poppins-regular);
}

/* Font Face Declarations */
@font-face {
    font-family: 'Parkinsans';
    src: url('../fonts/Parkinsans-Bold.woff2') format('woff2');
}

@font-face {
    font-family: 'Poppins-Regular';
    src: url('../fonts/Poppins-Regular.woff2') format('woff2');
}

@font-face {
    font-family: 'Poppins-Bold';
    src: url('../fonts/Poppins-Bold.woff2') format('woff2');
}

:root {
    --font-parkinsans: 'Parkinsans', sans-serif;
    --font-poppins-regular: 'Poppins-Regular', sans-serif;
    --font-poppins-bold: 'Poppins-Bold', sans-serif;

}


::-webkit-scrollbar {
    display: none;
}

/* =========================
   TOP HEADER
========================= */

.top-header {
    background: #f5f5f5;
    padding: 15px 0;
}

.logo {
    height: 50px;
}

.logo-area {
    display: flex;
    align-items: center;
    gap: 15px;
}

.naac {
    font-size: 14px;
    font-weight: 600;
}

.phone-btn {
    background: #0d6efd;
    color: #fff;
    padding: 10px 25px;
    border-radius: 30px;
    text-decoration: none;
    font-weight: 600;
    display: inline-flex;
    align-items: center;
    gap: 8px;
    transition: 0.3s ease;
    font-family: var(--font-poppins-bold);
}

.phone-btn i {
    font-size: 20px;
}

.phone-btn:hover {
    background: #084298;
    transform: translateY(-2px);
}


/* =========================
   HERO SECTION
========================= */

.hero {
    position: relative;
    background: url('../images/header-img.webp') no-repeat center center/cover;
    min-height: 100vh;
    display: flex;
    align-items: center;
    color: #fff;
}

.hero-overlay {
    position: absolute;
    inset: 0;
    background: linear-gradient(to right, rgba(0, 0, 80, 0.85), rgba(0, 0, 0, 0.2));
}

.hero-content {
    position: relative;
    z-index: 2;
}

.sub-heading {
    font-size: 1.5rem;
    margin-bottom: 3.5rem;
    opacity: 0.9;
}

.event-code {
    color: #ffd700;
    font-weight: 700;
    font-size: 3rem;
    font-family: var(--font-parkinsans);
}

.main-heading {
    font-size: 3.5rem;
    font-weight: 700;
    line-height: 1.3;
    font-family: var(--font-parkinsans);
    max-width: 900px;

}

.main-heading span {
    color: #ffd700;
}

.date-card {
    background: #fff;
    color: #000;
    padding: 15px 25px;
    border-radius: 10px;
    text-align: center;
    font-weight: 900;
    font-family: var(--font-parkinsans);
    position: relative;
}

/* Decorative dots on left side */
.date-card::before {
    content: '';
    position: absolute;
    left: -3%;
    top: 50%;
    transform: translateY(-125%);
    width: 15px;
    height: 15px;
    background: #ffd700;
    border-radius: 50%;
    box-shadow: 0 25px 0 0 #ffd700;
}

.date-card h3 {
    margin: 0;
    font-size: 2rem;
}

.date-card p {
    margin: 0;
    color: #0d6efd;
    font-weight: 600;
    font-size: 2rem;
}

.mode-text p {
    margin: 0;
    font-size: 1.7rem;
}

.event-details {
    margin-top: 3.5rem !important;
}


/* =========================
   ABOUT SECTION
========================= */

.about-section {
    background: #ffffff;
}

.about-icon {
    width: 90px;
    height: 90px;
    margin: 0 auto 20px;
    background: #1e73be;
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.about-icon i {
    font-size: 40px;
    color: #fff;
}

.about-heading {
    font-size: 2.8rem;
    font-weight: 700;
    font-family: var(--font-parkinsans);
}

.about-heading span {
    color: #1e73be;
}

.about-content p {
    font-size: 15px;
    line-height: 1.5;
    color: #333;
    margin-bottom: 15px;
    text-align: justify;
}

.about-image img {
    border-radius: 25px;
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
}



/* =========================
   FACULTY SECTION
========================= */

.faculty-section {
    background: #ffffff;
}

.faculty-icon {
    width: 90px;
    height: 90px;
    margin: 0 auto 20px;
    background: #1e73be;
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.faculty-icon i {
    font-size: 38px;
    color: #fff;
}

.faculty-icon {
    width: 90px;
    height: 90px;
    margin: 0 auto 20px;
    background: #1e73be;
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.faculty-icon img {
    width: 45px;
    height: 45px;
}

.faculty-heading {
    font-size: 2.5rem;
    font-weight: 700;
    font-family: var(--font-parkinsans);
}

.faculty-heading span {
    color: #1e73be;
}

.faculty-content {
    max-width: 100%;
    margin: 0 auto;
}

.faculty-content p {
    font-size: 15px;
    line-height: 1.8;
    color: #333;
    margin-bottom: 20px;
    text-align: justify;
}



/* =========================
   DEPARTMENT SECTION
========================= */

.department-section {
    background: #ffffff;
    /* Light grey background */
}

.department-icon {
    width: 90px;
    height: 90px;
    margin: 0 auto 20px;
    background: #1e73be;
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.department-icon img {
    width: 45px;
    height: 45px;
}

.department-heading {
    font-size: 2.8rem;
    font-weight: 700;
    font-family: var(--font-parkinsans);
}

.department-heading span {
    color: #1e73be;
}

.department-content {
    max-width: 100%;
    margin: 0 auto;
}

.department-content p {
    font-size: 15px;
    line-height: 1.8;
    color: #333;
    margin-bottom: 20px;
    text-align: justify;
}




/* =========================
   CONFERENCE SECTION
========================= */

.conference-section {
    background: #ffffff;
}

.conference-icon {
    width: 90px;
    height: 90px;
    margin: 0 auto 20px;
    background: #1e73be;
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.conference-icon img {
    width: 45px;
    height: 45px;
}
/* ... */

